Upgrade to Wagmi V2 (#342)
* initial wagmiv2 migration
- bump wagmi/viem ++ add tanstack
- bump @wagmi/cli
- bump connectkit

* wagmi breaking changes
- useErc20Allowance -> useReadErc20Allowance
- useErc20Approve -> useWriteErc20Approve
- useErc721Approve -> useWriteErc721Approve
- useWaitForTransaction -> useWaitForTransactionReceipt
- useNftyFinanceV1GetLoanAmountDue -> useReadNftyFinanceV1GetLoanAmountDue
- useNftyFinanceV1LiquidateDefaultedLoan -> useWriteNftyFinanceV1LiquidateDefaultedLoan
- useNftyFinanceV1MakeLoanPayment -> useWriteNftyFinanceV1MakeLoanPayment
- usePrepareNftyFinanceV1LiquidateDefaultedLoan -> useSimulateNftyFinanceV1LiquidateDefaultedLoan
- usePrepareNftyFinanceV1MakeLoanPayment -> useSimulateNftyFinanceV1MakeLoanPayment
- useNftyFinanceV1DepositLendingDeskLiquidity -> useWriteNftyFinanceV1DepositLendingDeskLiquidity
- useNftyFinanceV1WithdrawLendingDeskLiquidity -> useWriteNftyFinanceV1WithdrawLendingDeskLiquidity
- usePrepareNftyFinanceV1DepositLendingDeskLiquidity -> useSimulateNftyFinanceV1DepositLendingDeskLiquidity
- usePrepareNftyFinanceV1WithdrawLendingDeskLiquidity -> useSimulateNftyFinanceV1WithdrawLendingDeskLiquidity
- useNftyFinanceV1InitializeNewLendingDesk -> useWriteNftyFinanceV1InitializeNewLendingDesk
- useNftyFinanceV1RemoveLendingDeskLoanConfig -> useWriteNftyFinanceV1RemoveLendingDeskLoanConfig
- useNftyFinanceV1SetLendingDeskLoanConfigs -> useWriteNftyFinanceV1SetLendingDeskLoanConfigs
- useNftyFinanceV1SetLendingDeskState -> useWriteNftyFinanceV1SetLendingDeskState
- usePrepareNftyFinanceV1SetLendingDeskState -> useSimulateNftyFinanceV1SetLendingDeskState
- useNftyFinanceV1InitializeNewLoan -> useWriteNftyFinanceV1InitializeNewLoan
- usePrepareNftyFinanceV1InitializeNewLoan -> useSimulateNftyFinanceV1InitializeNewLoan
- useErc721GetApproved -> useReadErc721GetApproved

* wagmi breaking changes
remove usage of ?.hash
(Updated useSendTransaction and useWriteContract return type from { hash:

--- a/package.json
+++ b/package.json
@@ -23,6 +23,15 @@
     "dapp-v1"
   ],
   "devDependencies": {
+    "@biomejs/biome": "1.6.3",
+    "@types/bootstrap": "5.2.10",
+    "@types/react": "18.3.2",
+    "@types/react-dom": "18.3.0",
+    "@types/react-window": "1.8.8",
+    "@vitejs/plugin-react": "4.2.1",
+    "@wagmi/cli": "2.1.7",
+    "dotenv": "^16.3.1",
+    "vite": "5.2.11",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.3"
   }
