--- a/dapp-v1/package.json
+++ b/dapp-v1/package.json
@@ -16,9 +16,10 @@
     "@graphprotocol/client-cli": "3.0.3",
     "@graphprotocol/client-urql": "2.0.3",
     "@nftylabs/nft-lists": "0.0.3",
+    "@tanstack/react-query": "5.37.1",
     "@uniswap/token-lists": "1.0.0-beta.34",
     "alchemy-sdk": "3.3.1",
-    "connectkit": "^1.5.3",
+    "connectkit": "1.7.3",
     "graphql": "16.8.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -26,17 +27,7 @@
     "react-router-dom": "6.23.0",
     "react-window": "1.8.10",
     "urql": "4.1.0",
-    "viem": "^1.19.11",
-    "wagmi": "^1.4.8"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.6.3",
-    "@types/bootstrap": "5.2.10",
-    "@types/react": "18.3.2",
-    "@types/react-dom": "18.3.0",
-    "@types/react-window": "1.8.8",
-    "@vitejs/plugin-react": "4.2.1",
-    "@wagmi/cli": "^1.5.2",
-    "vite": "5.2.11"
+    "viem": "2.x",
+    "wagmi": "2.9.2"
   }
 }
