--- a/faucet/package.json
+++ b/faucet/package.json
@@ -10,22 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "buffer": "^6.0.3",
-    "connectkit": "^1.5.3",
-    "ethers": "^6.9.0",
-    "process": "^0.11.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
-    "util": "^0.12.5",
-    "wagmi": "^1.4.8"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.42",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@wagmi/cli": "^1.5.2",
-    "dotenv": "^16.3.1",
-    "vite": "^5.0.6"
+    "@tanstack/react-query": "5.37.1",
+    "connectkit": "1.7.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-hook-form": "7.51.4",
+    "viem": "2.x",
+    "wagmi": "2.9.2"
   }
 }
