--- a/dapp-v1/package.json
+++ b/dapp-v1/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "7.51.4",
     "react-router-dom": "6.23.0",
     "react-window": "1.8.10",
+    "react-window-infinite-loader": "^1.0.9",
     "urql": "4.1.0",
     "viem": "2.x",
     "wagmi": "2.10.9"
