--- a/contracts/package.json
+++ b/contracts/package.json
@@ -10,6 +10,7 @@
     "deploy:local": "yarn build && yarn hardhat deploy --network localhost",
     "deploy:sepolia": "yarn build && yarn hardhat deploy --network sepolia",
     "deploy:baseSepolia": "yarn build && yarn hardhat deploy --network baseSepolia",
+    "deploy:mainnet": "yarn build && yarn hardhat deploy_mainnet --network mainnet",
     "mythril": "myth analyze contracts/contracts/MagnifyCashV1.sol  --solc-json ./solc.json",
     "slither": "yarn hardhat clean && yarn hardhat compile && slither . --checklist --show-ignored-findings",
     "fuzz": "echidna ./test/GuardianAudits/fuzz/EchidnaRouter.sol --contract EchidnaRouter --config config.yaml",
