--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,11 +1,9 @@
 name: Deploy mdBook
-
 on:
   push:
     branches:
       - master
       - deployment/developer-docs
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -15,9 +13,12 @@ jobs:
       uses: peaceiris/actions-mdbook@v1
       with:
         mdbook-version: 'latest'
-    - run: mdbook build
+    - name: Build
+      run: |
+        cd docs
+        mdbook build
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./book
+        publish_dir: ./docs/book
