update mdbook permissions

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - master
       - deployment/developer-docs
+permissions:
+  contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
