--- a/faucet/package.json
+++ b/faucet/package.json
@@ -10,12 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "5.37.1",
-    "connectkit": "1.8.0",
+    "@tanstack/react-query": "5.56.2",
+    "connectkit": "1.8.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-hook-form": "7.51.4",
-    "viem": "2.x",
-    "wagmi": "2.12.0"
+    "react-hook-form": "7.53.0",
+    "viem": "2.21.14",
+    "wagmi": "2.12.14"
   }
 }
