--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": "true",
   "type": "module",
   "engines": {
-    "node": "20.x"
+    "node": ">=20.x"
   },
   "scripts": {
     "contracts": "yarn workspace magnify-contracts",
@@ -31,8 +31,8 @@
     "@vitejs/plugin-react": "4.2.1",
     "@wagmi/cli": "2.1.7",
     "dotenv": "^16.3.1",
-    "vite": "5.2.11",
     "ts-node": "^10.9.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "5.2.11"
   }
 }
