--- a/contracts/package.json
+++ b/contracts/package.json
@@ -9,7 +9,7 @@
     "test": "yarn hardhat test",
     "deploy:local": "yarn build && yarn hardhat deploy --network localhost",
     "deploy:sepolia": "yarn build && yarn hardhat deploy --network sepolia",
-    "deploy:baseSepolia": "yarn build && yarn hardhat deploy --network baseSepolia",
+    "deploy:baseSepolia": "yarn build && yarn hardhat deploy_mainnet --network baseSepolia",
     "deploy:base": "yarn build && yarn hardhat deploy_mainnet --network base",
     "deploy:mainnet": "yarn build && yarn hardhat deploy_mainnet --network mainnet",
     "mythril": "myth analyze contracts/contracts/MagnifyCashV1.sol  --solc-json ./solc.json",
